@@ -24,6 +24,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import jakarta.servlet.http.HttpServletResponse;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -63,6 +64,7 @@ public class SecurityConfig {
                 .requestMatchers("/oauth2/**").permitAll()
                 .requestMatchers("/api/health").permitAll()
                 .requestMatchers("/api/tickets/**").permitAll()
+                .requestMatchers("/api/**").permitAll()
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
                 .anyRequest().authenticated()
             )
@@ -98,16 +100,24 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        // Parse comma-separated origins from environment variable
+        CorsConfiguration configuration = new CorsConfiguration();
+        // Combine both sets of allowed origins
         List<String> allowedOrigins = Arrays.asList(corsAllowedOrigins.split(","));
-        config.setAllowedOrigins(allowedOrigins);
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
+        List<String> additionalOrigins = Arrays.asList("http://localhost:5173", "http://localhost:5174", "http://localhost:3000");
+        
+        // Merge the lists and remove duplicates
+        List<String> allOrigins = new ArrayList<>();
+        allOrigins.addAll(allowedOrigins);
+        allOrigins.addAll(additionalOrigins);
+        configuration.setAllowedOrigins(allOrigins.stream().distinct().toList());
+        
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
